--- a/repository.html
+++ b/repository.html
@@ -8,6 +8,7 @@
     <script src="https://code.angularjs.org/1.5.7/angular-route.js"></script>
     <script src="scripts/repository.js"></script>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 
