--- a/repository.html
+++ b/repository.html
@@ -17,27 +17,33 @@
     <span><h3>{{title}}</h3>{{titleDate}}</span>
 </div>
 
-<div ng-controller="blockController">
+<div class="repositoryBox" ng-controller="blockController">
 
     <input type="text" placeholder="Search by Type" ng-model="searchBlock.type" />
 
     <input type="text" placeholder="Search any content" ng-model="searchText" />
 
 
-    <table class="block" ng-repeat="block in blocks | filter: searchBlock | filter:search">
-        <tr >
-            <td class="blockType">{{block.type}}</td>
-            <td>{{block.miniTitle}}</td>
-        </tr>
-        <tr>
-            <td><br/>{{block.length}}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><br/><button class="attach" ng-click="blockMenu">add file</button></td>
-            <td><br/><button class="blockMenu" ng-click="blockMenu"></button></td>
-        </tr>
-    </table>
+    <div class="block" ng-repeat="block in blocks | filter: searchBlock | filter:search">
+        <div>
+            <div class="blockType">{{block.type}}</div>
+            <div class="miniTitle">{{block.miniTitle}}</div>
+        </div>
+
+        <div class="blockLength">
+            {{block.length}}
+        </div>
+        <div>
+            <button class="attach" ng-click="blockMenu">file</button>
+            <button class="blockMenu" ng-click="blockMenu"></button>
+        </div>
+    </div>
+
+</div>
+
+<!--the list view-->
+<div class="listBox">
+
 </div>
 
 
