--- a/repository.html
+++ b/repository.html
@@ -28,16 +28,6 @@
 </div>
 
 
-<div ng-controller="typeController" >
-    <button id="type" ng-click="createChild()" >+</button>
-
-    <form  ng-show="createChild==true" id="createTypeForm">
-        <input type="text" placeholder="Title" ng-model="newBlock.miniTitle">
-        <input type="time" placeholder="30 Min." ng-model="newBlock.length">
-        <input type="submit" value="Save" ng-click="saveChild()">
-    </form>
-</div>
-
 
 
 <!--creating the child boxes (hard coded in array not. -->
@@ -45,11 +35,18 @@
 
 <div class="repositoryBox" ng-controller="blockController">
 
+  <form name="createTypeForm" ng-submit="addChildToBoard()">
+        <input type="text" placeholder="Type" ng-model="block.type">
+        <input type="text" placeholder="Title" ng-model="block.miniTitle">
+        <input type="text" placeholder="30 Min" ng-model="block.length">
+        <input type="submit" value="Save">
+    </form>
+
     <input type="text" placeholder="Search by Type" ng-model="searchBlock.type" />
     <input type="text" placeholder="Search any content" ng-model="searchText" />
 
 
-    <div ng-repeat="block in blocks | filter: searchBlock | filter:search">
+    <div ng-repeat="block in blocks | filter: searchBlock | filter: search">
         <div class="block ui-widget-content" >
             <div>
                 <div class="blockType">{{block.type}}</div>
