--- a/repository.html
+++ b/repository.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src="https://code.angularjs.org/1.5.7/angular.js"></script>
     <script src="https://code.angularjs.org/1.5.7/angular-route.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>"
+    <!--<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>"-->
     <script src="scripts/repository.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
