--- a/repository.html
+++ b/repository.html
@@ -68,7 +68,16 @@
 </div>
 
 
-<div id="trash">ghjghj</div>
+<div id="trash" class="ui-widget-header">
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+
+</div>
 
 </body>
 </html>
